# truagent_smarthome_dspy

./: .gitignore  CODEBASE_RECOMMENDATIONS.md  PROJECT_ROADMAP.md  README.md  SOAR_MIGRATION.md  pyproject.toml  requirements.txt
agent_config/: 00_agent_config.csv  01_intent_tree.csv  02_action_space.csv  03_tribal_knowledge.csv  04_utterance_decoder.csv  05_utterance_encoder.csv  06_dspy_examples.csv  07_dspy_eval_cases.csv
generators/: __init__.py  config_validator.py  csv_parser.py  generate_all.py  generate_models.py
grafana/: docker-compose.yml
grafana/dashboards/: llm_observability.json  llm_observability_demo.json
grafana/prometheus/: prometheus.yml
src/: __init__.py
src/conversation/: classifier_pipeline.py  decoder.py  encoder.py
src/engine/: __init__.py  cognitive_engine.py  control.py  goals.py  impasse.py  operator_handler.py  policy.py  productions.py  runtime_model.py  tracing.py  types.py  working_memory.py
src/evaluation/: __init__.py  decoder_eval.py
src/soar/: __init__.py  controller.py  io_manager.py
src/tools/: base.py  executor.py  registry.py
src/tools/plugins/: present_farewell.py  rule_evaluator.py
src/ui/: __init__.py  agent_runner.py  cli.py
tests/: test_cognitive_engine.py  test_config_validator.py  test_decoder_eval.py  test_dspy_examples_config.py  test_generate_models.py  test_new_metrics.py  test_runner_architecture.py  test_soar_core.py
venv_soar/: pyvenv.cfg
